# matrix-tui

./: Cargo.toml  README.md  TODO.md  deny.toml
.devcontainer/: Dockerfile  README.md  config.toml  devcontainer.json  docker-compose.dev.yml  element-config.json  tail_log.sh
src/: app.rs  cli.rs  event.rs  logging.rs  main.rs  ui.rs
src/config/: core.rs  matrix.rs  mod.rs  persistence.rs  terminal.rs
src/events/: channels.rs  event.rs  event_loop.rs  mod.rs  mode.rs
src/matrix/: context.rs  event.rs  handler.rs  login.rs  message.rs  mod.rs  session.rs
src/matrix/models/: message.rs  mod.rs  room.rs
src/ui/: component.rs  header.rs  input.rs  messages.rs  mod.rs  navigation.rs  spinner.rs  status_line.rs  user_input.rs
src/ui/authentication/: credentials.rs  login_choice_prompt.rs  mod.rs  password_prompt.rs  prompts.rs  username_prompt.rs
src/ui/navigation/: mod.rs  rooms.rs
src/utils/: datetime.rs  mod.rs
test-server/: .gitignore  db-config.env  docker-compose.yml  element-config.json  homeserver.yml  synapse-config.env
