[package]
name = "matrix-tui"
version = "0.0.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Matrix in the terminal."
repository = "https://github.com/Xithrius/matrix-tui"
license = "GPL-3.0"
keywords = ["tui", "matrix"]
categories = ["command-line-utilities"]

[dependencies]
tui = { package = "ratatui", version = "0.30.0", default-features = false, features = [
    "crossterm",
    "serde",
] }
matrix-sdk = { version = "0.16.0", features = ["sso-login"] }
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.37", features = ["derive", "cargo"] }
rustyline = "15.0.0"
color-eyre = "0.6.5"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
serde = { version = "1.0.211", features = ["derive"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
config = { version = "0.15.11", default-features = false, features = ["toml"] }
directories = "5.0.1"
toml = "0.9.10"
url = "2.5.8"
futures-util = "0.3.32"

[profile.dev]
lto = "off"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
